--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <footer class="bg-zinc-800 border-solid border border-zinc-700 border-b-0 footer pl-0 pr-0 text-zinc-300 text-center rounded-tr rounded-tl mt-16 h-full w-full">
         <div class="w-full flex justify-center pb-5 p-10">
-            <h1 class="text-base">Made with ❤ by Claudio.</h1>
+            <h1 class="text-base">Made by Cláudio.</h1>
         </div>
     </footer>
 
