--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Claudio A.</title>
-        <link rel="stylesheet" href="./src/style.css">
+        <title>Claudio A. 🚀</title>
         <link rel="icon" type="image/x-icon" href="./src/favicon.svg">
+        <link rel="stylesheet" href="./src/style.css">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -100,7 +100,7 @@
                     </div>
                 </a>
                 
-                <a href="http://github.com/codedca/darkbox" target="_blank" >
+                <a href="https://github.com/CodedCA/shapeshifter" target="_blank" >
                     <div class="folder-one bg-zinc-800 p-6 rounded flex border-solid border border-zinc-700 text-zinc-300 flex-col h-48 md:h-72 w-full md:w-60">
                         <div class="flex flex-row mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6  mr-2">
@@ -119,7 +119,7 @@
                     </div>
                 </a>
 
-                <a href="http://github.com/codedca/darkbox" target="_blank" >
+                <a href="https://github.com/CodedCA/sharp" target="_blank" >
                     <div class="folder-one bg-zinc-800 p-6 rounded flex border-solid border border-zinc-700 text-zinc-300 flex-col h-48 md:h-72 w-full md:w-60">
                         <div class="flex flex-row mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6  mr-2">
@@ -138,7 +138,7 @@
                     </div>
                 </a>
 
-                <a href="http://github.com/codedca/darkbox" target="_blank" >
+                <a href="https://github.com/CodedCA/ping" target="_blank" >
                     <div class="folder-one bg-zinc-800 p-6 rounded flex border-solid border border-zinc-700 text-zinc-300 flex-col h-48 md:h-72 w-full md:w-60">
                         <div class="flex flex-row mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6  mr-2">
@@ -157,7 +157,7 @@
                     </div>
                 </a>
 
-                <a href="http://github.com/codedca/darkbox" target="_blank" >
+                <a href="http://github.com/codedca" target="_blank" >
                     <div class="folder-one bg-zinc-800 p-6 rounded flex border-solid border border-zinc-700 text-zinc-300 flex-col h-48 md:h-72 w-full md:w-60">
                         <div class="flex flex-row mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6  mr-2">
