--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg></a>
                         <a href="http://github.com/codedca" target="_blank" ><i class="ml-2 text-teal-500 fa-brands fa-github"></i></a>
-                        <a href="http://twitter.com/claudio_cdd" target="_blank" ><i class="ml-2 text-teal-500 fa-brands fa-twitter"></i></a>
+                        <a href="http://twitter.com/claudio_avgo" target="_blank" ><i class="ml-2 text-teal-500 fa-brands fa-twitter"></i></a>
                     </div>
                 </div>
                 <div class="pt-16 md:pt-0 md:mt-none text-teal-600 font-mono text-xl md:text-2xl h-4/6 md:w-2/4 w-full flex justify-evenly items-center">
