--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Claudio A. 🚀</title>
+        <title>Claudio A.</title>
         <link rel="icon" type="image/x-icon" href="./src/favicon.svg">
         <link rel="stylesheet" href="./src/style.css">
         <script src="https://cdn.tailwindcss.com"></script>
